2007-02-01 Jens Tkotz <jens@peino.de> 1.5.6-svn-b8

 * Fix: Uninitialized return value in locateDir()
   Thanks to Peter Schumacher.

2007-01-31 Jens Tkotz <jens@peino.de> 1.5.6-svn-b7

 * Fix: Bug #1305215, enhanced files that are treated as executable
		on win32.

2007-01-31 Jens Tkotz <jens@peino.de> 1.5.6-svn-b6

 * Bug/RFE: #1589714, Better errormessage which .htaccess is meant.

2007-01-30 Jens Tkotz <jens@peino.de> 1.5.6-svn-b5

 * Fix: Manifest update.

 * Fix: Bug #1121796

 * Fix: Correct pages jump to next and previous block in navigator.

2007-01-20 Jens Tkotz <jens@peino.de> 1.5.6-svn-b4

 * Fix: Login was broken in b1.

 Thanks to Brian Rademacher!

2007-01-02 Jens Tkotz <jens@peino.de> 1.5.6-svn-b3

 * Change: Update Copyright to 2007

2007-01-02 Jens Tkotz <jens@peino.de> 1.5.6-svn-b2

 * Fix: When Comments are globally deactivated, but a user has
	    the right to add a comment, the global deactivation didnt
	    work and a user can bypass this.

2006-12-18 Jens Tkotz <jens@peino.de> 1.5.6-svn-b1

 * Fix: Bug #1608264
	After logging in, the userlanguage was not set.

 * Change: Move the session init before the language init in init.php

2006-12-07 Chris Kelly <ckdake@ckdake.com> 1.5.5-pl2-svn-b1

 * Fix: svn keywords were missing on some files which broke
 	up to date checking in the config wizard

2006-11-12 Chris Kelly <ckdake@ckdake.com> 1.5.5-pl1

 * Fix: Small typo broke slideshow in Opera and IE
 * Release: 1.5.5-pl1

2006-11-12 Chris Kelly <ckdake@ckdake.com> 1.5.5

* Release: 1.5.5

2006-11-12 Jens Tkotz <jens@peino.de> 1.5.5-svn-b21

 * Fix: Little CSS issue in config wizard.

 * Fix: More Typos.

2006-11-12 Jens Tkotz <jens@peino.de> 1.5.5-svn-b20

 * Fix: Vertical Flip was broken in rotate/flip dialog.

 * Fix: Typos.

   Thanks to C.M. aka H.P.

2006-11-12 Jens Tkotz <jens@peino.de> 1.5.5-svn-b19

 * Fix: Embedded slideshow in low mode.

 * Change: Added class "g-photo" around every thumb and photo.