@@ -1,3 +1,7 @@
+2007-02-06 Jens Tkotz <jens@peino.de> 1.5.6-svn-b9
+
+ * New: Added build manifest script for svn 1.4
+
 2007-02-01 Jens Tkotz <jens@peino.de> 1.5.6-svn-b8
 
  * Fix: Uninitialized return value in locateDir()
